# superset-pdf-report

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  start.py
supersetpdfreport/: chart.py  config.py  logging.py  nextcloud.py  pdf_report.py  process_job.py  security.py  send_mail.py  task.py
supersetpdfreport/jobs/: example_job.json
supersetpdfreport/latex/: example_job.tex
