[metadata]
name = superset-pdf-report
version = 0.1
author = Andreas Hasselberg
author_email = andreas.hasselberg@htw-dresden.de
description = For generating a pdf-report with apache-superset charts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheHassi/superset-pdf-report
classifers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
[options]
packages = find:
python_requires = >=3.8
include_package_data = True
